# AutoML-Python-Benchmark

./: .dvcignore  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml  requirements.txt  run.py
.github/workflows/: bandit.yml  pylint.yml  pytest.yml  stale.yml
data/: SKAB.dvc  iemocap.dvc  ravdess.dvc
docs/archive/: automl_capabilities.md  correlations.ipynb  v0.0.1_README.md
docs/literature/: exploration.py
scripts/: clone_or_pull.sh  download_univariate_forecasting_dataset.sh  run.sh  sonar_scanner.sh  source_code_analysis.sh
shell/: download_anomaly_datasets.sh  download_forecasting_datasets.sh  download_univariate_forecasting_dataset.sh  pull_repos.sh  repo_clone_or_pull.sh  repo_line_counts.sh  repo_sonar_scanner.sh  sonar_scanner.sh
src/: __init__.py  abstract.py  base.py  data_loader.py  dataset_formatting.py  errors.py  fill_missing_GME_scores.py  forecasting.py  frequencies.py  logs.py  util.py  utils.py  validation.py
src/R/: findFrequency.R
src/TSForecasting/: data_loader.py
src/autogluon/: models.py  requirements.txt
src/autokeras/: models.py  requirements.txt
src/automl/: README.md  base.py  dataset_formatting.py  datasets.py  errors.py  forecasting.py  frequencies.py  logs.py  util.py  validation.py
src/automl/R/: findFrequency.R
src/automl/TSForecasting/: README.md
src/automl/autogluon/: models.py
src/automl/autokeras/: models.py
src/automl/autopytorch/: models.py
src/automl/autots/: models.py
src/automl/etna/: models.py  requirements.txt
src/automl/evalml/: models.py  requirements.txt
src/automl/fedot/: models.py
src/automl/flaml/: models.py
src/automl/ludwig/: models.py
src/automl/pycaret/: models.py
src/autopytorch/: models.py  requirements.txt
src/autots/: models.py  requirements.txt
src/etna/: models.py  requirements.txt
src/evalml/: models.py  requirements.txt
src/fedot/: models.py  requirements.txt
src/flaml/: models.py  requirements.txt
src/ludwig/: models.py  requirements.txt
src/ml/: __init__.py  __main__.py  base.py  configuration.py  dataset.py  datasets.py  errors.py  forecasting.py  latex.py  logs.py  metrics.py  plots.py  tasks.py  util.py  utils.py  validation.py
src/ml/TSForecasting/: data_loader.py
src/ml/ad/: __init__.py  __main__.py  anomaly_detection.py
src/ml/archived/automl/: README.md
src/ml/archived/etna/: models.py
src/ml/archived/forecasting/: dataset.py  forecasting.py  plots.py
src/ml/archived/pyodds/: Dockerfile
src/ml/auto_pytorch/: Dockerfile  models.py
src/ml/autogluon/: Dockerfile  models.py
src/ml/autokeras/: Dockerfile  models.py
src/ml/automl/: __init__.py
src/ml/automl/auto_pytorch/: Dockerfile  models.py  requirements.txt
src/ml/automl/auto_sklearn/: Dockerfile  models.py
src/ml/automl/autogluon/: Dockerfile  models.py  requirements.txt
src/ml/automl/autokeras/: Dockerfile  README.md  models.py
src/ml/automl/autots/: Dockerfile  models.py  requirements.txt
src/ml/automl/evalml/: Dockerfile  models.py
src/ml/automl/fedot/: Dockerfile  models.py
src/ml/automl/fedot.industrial/: Dockerfile
src/ml/automl/flaml/: Dockerfile  models.py  requirements.txt
src/ml/automl/gama/: Dockerfile
src/ml/automl/h2o_3/: Dockerfile  Dockerfile_new  Dockerfile_public  README.md  docker-compose.yml
src/ml/automl/h2o_3/server/: Dockerfile  README.md  docker-compose.yml
src/ml/automl/hyperopt_sklearn/: Dockerfile
src/ml/automl/hyperts/: Dockerfile
src/ml/automl/kats/: Dockerfile
src/ml/automl/lightautoml/: Dockerfile
src/ml/automl/ludwig/: Dockerfile  models.py
src/ml/automl/mlbox/: Dockerfile
src/ml/automl/mljar_supervised/: Dockerfile
src/ml/automl/pycaret/: Dockerfile  models.py  requirements.txt
src/ml/automl/pyod/: Dockerfile
src/ml/automl/pyodds/: Dockerfile
src/ml/automl/tpot/: Dockerfile
src/ml/autots/: Dockerfile  models.py
src/ml/etna/: models.py
src/ml/ludwig/: models.py
src/ml/pycaret/: models.py
src/ml/sca/: __init__.py  __main__.py  analysis.py  lcom.py  repo.py  reporting.py
src/pycaret/: models.py  requirements.txt
src/sca/: README.md  __init__.py
tests/: __init__.py  conftest.py  functional_tests.py  gpu_test.py  requirements.txt  test_configuration.py  test_conftest.py  test_datasets.py  test_latex.py  test_main.py  test_sca_analysis.py  test_univariate_forecasting.py  test_utils.py
tests/test_ad/: test_anomaly_detection.py
tests/test_sca/: test_analysis.py  test_repo.py
