[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project]
name = "automl_benchmark"
authors = [
    { name="Christian O'Leary", email="christian.oleary@mtu.ie" },
]
description = "AutoML Python Benchmark"
readme = "README.md"
requires-python = "==3.10"
dynamic = [ "version", "dependencies" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "flake8==7.1.1",
    "mypy==1.11.1",
    "pylint==3.1.0",
    "ruff==0.6.5",
    "setuptools",
]
docs = [
    "grip==4.6.2",
    "Jinja2==3.0.3",
    "pydot==2.0.0",
    "Sphinx==5.3.0",
    "sphinx_mdinclude==0.6.0",
    "sphinx-rtd-theme==2.0.0",
]

[project.urls]
Homepage = "https://github.com/christian-oleary/AutoML-Python-Benchmark"
Issues = "https://github.com/christian-oleary/AutoML-Python-Benchmark/issues"



################################################################################
# BLACK
[tool.black]
skip-string-normalization = true
line-length = 100
target-version = ['py39', 'py310']

################################################################################
# COVERAGE
[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = [ # Regexes for lines to exclude from consideration
    "def __repr__", "if self\\.debug",  # Don't complain about missing debug-only code
    "raise AssertionError", "raise NotImplementedError",  # Don't complain if tests don't hit defensive assertion code
    "if 0:", "if __name__ == .__main__.:",  # Don't complain if non-runnable code isn't run
    "@(abc\\.)?abstractmethod",  # Don't complain about abstract methods, they aren't run
]
ignore_errors = true
show_missing = true
fail_under = 20

[tool.coverage.html]
directory = "./docs/coverage_html_report"

################################################################################
# MYPY
[tool.mypy]
ignore_missing_imports = true
exclude = "tests"

################################################################################
# PYDOCSTYLE
[tool.pydocstyle]
inherit = false
ignore = [
    "D107",
    "D203",  # Blank line before class docstring
    "D213",
    "D400",  # First line should end in period 1
    "D401",
    "D415",  # First line should end in period 2
]
match = ".*\\.py"

################################################################################
# PYLINT
[tool.pylint.'MASTER']
addopts = "--rcfile=.pylintrc"

################################################################################
# PYTEST
[tool.pytest.ini_options]
addopts = "-ra --durations=10 --cov --cov-report xml:coverage.xml --junitxml=report.xml"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
console_output_style = "progress"
filterwarnings = "ignore::DeprecationWarning"
testpaths = [ "tests" ]
ignore = [ "data_loader.py" ]

################################################################################
# RUFF
[tool.ruff]
exclude = ["docs"]

[tool.ruff.format]
quote-style = "single"

################################################################################
