[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project]
name = "ml"
authors = [
    { name="Christian O'Leary", email="christian.oleary@mtu.ie" },
]
description = "AutoML Python Benchmark"
readme = "README.md"
dynamic = ["version", "dependencies"]
requires-python = "==3.10.*"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
# Development
dev = [
    "setuptools",
    "coverage==7.4.4",    # Code coverage
    "pytest==8.2.2",      # Testing
    "pytest-cov==5.0.0",  # Pytest with Coverage
    "pre-commit==3.7.1",  # Git hooks
]

# Documentation
docs = [
    "Sphinx==5.3.0",            # Documentation generator
    "sphinx_mdinclude==0.6.0",  # Markdown include for Sphinx
    "sphinx-rtd-theme==2.0.0",  # Read the Docs theme
    "docxbuilder==1.2.0",       # Word document builder
    "docxbuilder[math]",        # Math support
]

# Source code analysis.
sca = [
    "autoflake",     # Removes unused imports/variables
    "autopep8",      # Code formatting
    "bandit",        # Security checks
    "black",         # Code formatting
    "codespell",     # Spelling checks  # Check how to use multiple dictionaries?
    "coverage",      # Code coverage
    "dead",          # Dead code detection
    "doc8",          # Documentation style checking
    "docformatter",  # Documentation style checking
    "isort",         # Import sorting
    "it",            # InspectorTiger. Code quality checks
    "lint",          # Linter
    "mypy",          # Type checking
    "outdated",      # Outdated dependency checks
    "radon[toml]",   # Code metrics
    "rope",          # Refactoring
    "rstcheck[sphinx,toml]", # ReStructuredText checks
    "ruff",          # Code formatting
    "safety",        # Security checks
    "uncalled",      # Finds uncalled code
    # "tox",         # To be considered...
    "yapf",          # Code formatting
    ### Flake8 ###
    "flake8", "flake8-bugbear", "flake8-docstrings", "flake8-import-order",
    "mccabe",       # Complexity
    "pycodestyle",  # Code style
    # "pydocstyle",   # Docstring style  # Officially deprecated
    "pyflakes",     # Static analysis
    ### Prospector ###
    "dodgy",      # Finds "dodgy" code
    "prospector", # Code quality checks
    "pyroma",     # Checks package installation "friendliness"
    "vulture",    # Finds unused code
    ### Pylint ###
    "astroid",    # Static analysis of Python code
    "pylint", "pylint-celery", "pylint-django",
    "pylint-flask", "pylint-mccabe", "pylint-pytest",
    ##############
    # Deprecated: "frosted"
    # Redundant: "hacking", "unimport", "zimports"
]

# Machine learning
lightgbm = ["lightgbm"]
tensorflow = ["tensorflow==2.10.1", "protobuf==3.19.5"]
torch = ["torch==2.3.1"]
xgboost = ["xgboost"]
ai = ["ml[lightgbm,tensorflow,torch,xgboost]"]

# All dependencies except SCA
all = ["ml[dev,docs,sca,lightgbm,tensorflow,torch,xgboost]"]

[project.urls]
Homepage = "https://github.com/christian-oleary/AutoML-Python-Benchmark"
Issues = "https://github.com/christian-oleary/AutoML-Python-Benchmark/issues"

################################################################################
# BANDIT
[tool.bandit]
exclude = ["tests", "docs", "repositories", "**/TSForecasting/*"]
exclude_dirs = ["tests", "docs", "repositories", "**/TSForecasting/*"]

################################################################################
# BLACK
[tool.black]
skip-string-normalization = true
line-length = 100
target-version = ['py39', 'py310']

################################################################################
# COVERAGE
[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = [ # Regexes for lines to exclude from consideration
    "def __repr__", "if self\\.debug",  # Don't complain about missing debug-only code
    "raise AssertionError", "raise NotImplementedError",  # Don't complain if tests don't hit defensive assertion code
    "if 0:", "if __name__ == .__main__.:",  # Don't complain if non-runnable code isn't run
    "@(abc\\.)?abstractmethod",  # Don't complain about abstract methods, they aren't run
]
ignore_errors = true
show_missing = true
fail_under = 20

[tool.coverage.html]
directory = "./docs/coverage_html_report"

################################################################################
# MYPY
[tool.mypy]
exclude = ["tests", "docs", "repositories", "**/TSForecasting/*"]
explicit_package_bases = true
ignore_missing_imports = true
namespace_packages = true

################################################################################
# PYDOCSTYLE
[tool.pydocstyle]
inherit = false
ignore = [
    "D107",  # Missing docstring in __init__
    "D203",  # Blank line before class docstring
    "D213",  # Multi-line docstring summary should start at the second line
    "D400",  # First line should end in period
    "D401",  # First line should be in imperative mood
    "D415",  # First line should end with period/question mark/exclamation point
]
match = ".*\\.py"

################################################################################
# PYLINT
[tool.pylint.'MASTER']
fail-under = 8.0
disable = [
    "C0103", # invalid-name
    "E0110", # abstract-class-instantiated
    "E0611", # no-name-in-module
    "E0401", # import-error
    "W0201", # attribute-defined-outside-init
    "W1203", # logging-fstring-interpolation
]
ignore = ["tests", "**/TSForecasting/*"]
ignore-comments = false
ignore-docstrings = false
ignore-imports = false
ignored-classes = ["optparse.Values", "thread._local", "_thread._local"]
ignored-modules=["numpy.random", "sklearn.datasets"]
ignore-on-opaque-inference=true
# Warn about missing members when the owner of the attribute is inferred to be None
ignore-none=true
max-args=12
max-attributes=10
max-line-length=120
max-locals=16
# min-similarity-lines=3

################################################################################
# PYTEST
[tool.pytest.ini_options]
addopts = "-ra --durations=10 --cov --cov-report xml:coverage.xml --junitxml=report.xml"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
console_output_style = "progress"
filterwarnings = "ignore::DeprecationWarning"
testpaths = [ "tests" ]
ignore = [ "data_loader.py" ]

################################################################################
# RUFF
[tool.ruff]
exclude = ["docs"]
output-format = "full"

[tool.ruff.format]
quote-style = "single"

################################################################################
